# lrm-code-chapter-2

./: .gitignore  .pre-commit-config.yaml  README.md  program.md  pyproject.toml
.github/workflows/: ci.yml
agents/: chapter-02-guide.md
docs/: MANNING_STYLE.md  chapter_2_plan.md  design.md
docs/decisions/: simulator-choice.md  task-progression.md
notebooks/: ch02.ipynb
scripts/: check_dataset.py  check_env.py  check_pipeline.py  check_scripted.py  check_viz.py
src/ch02/: __init__.py  _metrics.py  dataset.py  env.py  pipeline.py  scripted.py  viz.py
tests/: agent_prompts.md  conftest.py  test_dataset.py  test_env.py  test_pipeline.py  test_scripted.py  test_smoke.py  test_viz.py
