[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrm-ch02"
version = "0.1.0"
description = "Companion code for Chapter 2 of Build a Large Robot Model (From Scratch)"
requires-python = ">=3.12,<3.13"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.1,<3.0",
    "numpy>=1.24,<3.0",
    "gymnasium>=0.29,<2.0",
    "matplotlib>=3.7,<4.0",
]

[project.optional-dependencies]
# Simulator. ManiSkill3 (Apache 2.0, SAPIEN-based) ships SO-100 as a
# first-class robot and SO100GraspCube as a sim2real digital twin. See
# docs/design.md §5 for the rationale and the lerobot-sim2real notes.
# Colab readers must run the 7-cell Vulkan setup documented in the
# README before this extra is usable.
sim = [
    "mani-skill==3.0.1",
]
# Dataset stack. Targets the lerobot 0.5.1 API for SO-101 datasets.
data = [
    "lerobot==0.5.1",
]
# Developer tooling.
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
    "jupyter",
    "nbconvert",
    "nbstripout",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 76
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring ManiSkill / SAPIEN / Vulkan (deselect with -m 'not integration')",
]
